regression/verilog/data-types/wire_must_be_fourvalued.sv
module top;
  // 1800 2017 6.7.1
  // error: wires must have a four-valued data type
  wire bit some_wire;
endmodule
